# marvel_gnn

./: .gitignore  README.md  pyproject.toml
src/marvel_gnn/core/: network.py  parse.py  solver.py  uncertainty.py
src/marvel_gnn/gnn/: corrupt.py  data.py  labelfix.py  linkage.py  model.py  train.py
tests/: test_co2_oracle.py  test_co_oracle.py  test_gnn.py  test_labelfix.py  test_linkage.py  test_network_solver.py  test_outlier.py  test_parse.py  test_schema.py  test_smoke.py  test_uncertainty.py
